Bug 2042550 - Remove scrollbar when there is no content to scroll through. r=mconley
Differential Revision: https://phabricator.services.mozilla.com/D302689

UltraBlame original commit: e0fb5775181f6a9b7e09c2ee52ff851ee9cd1168

--- a/browser/extensions/newtab/content-src/styles/nova/activity-stream.scss
+++ b/browser/extensions/newtab/content-src/styles/nova/activity-stream.scss
@@ -46,7 +46,7 @@ body {
   background-image:
     var(--newtab-wallpaper, ''),
     linear-gradient(to right, var(--newtab-wallpaper-color, ''), var(--newtab-wallpaper-color, ''));
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 h1,
